# apicentric

./: .dockerignore  .env  .env.example  .gitignore  ANNOUNCEMENT_DRAFT.md  ARCHITECTURE.md  CLEANUP_COMPLETE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo-full.toml  Cargo.toml  Dockerfile  Dockerfile.amadeus-mock  Dockerfile.production  FINAL_STATUS.md  FRONTEND_FIXES.md  INTEGRATION_COMPLETE.md  LICENSE  Makefile  P2P_ANALYSIS.md  README-CLOUD.md  README.md  RELEASE_CHECKLIST.md  TESTING_AUDIT.md  apicentric.json  apicentric_logs_20260117_222903.txt  benchmark.rs  build-performance.md  check_to_ipv4  clippy.toml  demo-contract-testing.sh  demo_all.sh  deploy.sh  docker-compose.yml  final-contract-demo.sh  find_unwraps.py  index.js  mockforge.json  mocks.yaml  nginx.conf  (+21 more)
.Jules/: palette.md
.agent/memory/: project_context.md
.agent/rules/: rules.md
.apicentric/reports/: demo_contract_Star Wars API_20250828_150353.html  demo_contract_Star Wars API_20250828_150548.html  demo_contract_Star Wars API_20250828_150622.html  demo_contract_star-wars-api_20250828_145514.html  demo_contract_star-wars-api_20250828_145640.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  e2e-tests.yml  release.yml
.jules/: bolt.md  palette.md  sentinel.md
.kilocode/: mcp.json
.pulse/contracts/: 3e809013-eea3-4270-b689-614b427ec003.json  star-wars-api.json
.pulse/reports/: demo_contract_Star Wars API_20250828_150353.html  demo_contract_Star Wars API_20250828_150548.html  demo_contract_Star Wars API_20250828_150622.html  demo_contract_star-wars-api_20250828_145514.html  demo_contract_star-wars-api_20250828_145703.html
Formula/: .gitignore  CHECKLIST.md  HOMEBREW-TAP-SUMMARY.md  README.md  SETUP.md  TAP-STRUCTURE.md  apicentric.rb  mockforge.rb  update-checksums.sh
config/: apicentric.example.json
data/: auth.db  pulse.db
demo_resources/: mqtt_twin.yaml  service.yaml  twin.yaml
deployment/: deploy.sh  docker-compose.yml
docker-output/: .dockerignore  Dockerfile
docker-output/services/: user-api.yaml
docs/: DEPLOYMENT.md  MONITORING.md  README-CLOUD.md  README.md  SECURITY.md
docs/architecture/: CLEAN_ARCHITECTURE_COMPLETE.md  WEBSOCKET_FIXES.md
docs/development/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_FLAGS.md  GLOSSARY.md  IMPLEMENTATION-SUMMARY.md
docs/guides/: authentication.md  configuration-api.md  configuration.md  developer-experience.md  error-handling.md  features.md  p2p.md  plugins.md  publishing.md  quick-start.md  request-recording.md  troubleshooting.md  tui.md
docs/maintenance/: DOCS_REORGANIZATION_COMPLETE.md
docs/reports/: API_TEST_RESULTS.md  BUILD_OPTIMIZATION_REPORT.md  DEAD_CODE_ANALYSIS.md  DEPENDENCY_GRAPH.md  SECURITY_AUDIT_REPORT.md  UNUSED_CODE_REPORT.md  build-performance.md  informe.txt
docs/tasks/: TASK-13-SUMMARY.md  TASK_4_SUMMARY.md
examples/: acme-sensor.yaml  cloud_server.rs  ecommerce-api.yaml  embedded_api_server.rs  embedded_iot_twin.rs  insomnia-collection.json  postman-collection.json  programmatic_demo.rs  start_server.rs  swapi-mock.yaml  swapi-service.yaml
examples/iot/: faulty-sensor.yaml  gps-tracker.yaml  industrial-pump.yaml  publisher.yaml  schneider-pm5300.yaml  solar-inverter.yaml  (+3 more)
gui/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
gui/src/: App.tsx  index.tsx  main.rs
gui/src/adapters/: TauriServicePort.ts
gui/src/api/: client.ts
gui/src/components/: Dashboard.tsx  ServiceManager.tsx  Sidebar.tsx  SimulatorControls.tsx  logs_view.tsx  route_editor.tsx
gui/src/components/__tests__/: route_editor.test.tsx  service_manager.test.tsx  sidebar.test.tsx
gui/src/ports/: ServicePort.ts
iot/: publisher.yaml  subscriber.yaml
mobile/: .flutter-plugins  SETUP.md  pubspec.yaml
mobile/native/: Cargo.toml
mobile/native/src/: api.rs  frb_generated.rs
npm/: README.md  install.js  package.json
packaging/: Dockerfile
scripts/: build-production.sh  health_check.sh  install.ps1  install.sh  integrate-api-wip.sh  quick-start.sh  release.sh  test_mcp.sh  test_mcp_http.sh  verify-ci.ps1  verify-ci.sh  verify_commands.sh  wizard.sh
services/: Pets.yaml  amadeus-soap.yaml  amadeus.yaml  auth_service.yaml  demo-service.yaml  dummy.yaml  openai.yaml  openapi.yaml  pets-clean.yaml  philips-hue.yaml  smart-meter.yaml  smart-thermostat.yaml  test-service-pets.yaml  test-service.yaml  test_fixed.yaml  user-api.yaml  weather-station.yaml
src/: check_feature.rs  cli_ui.rs  config.rs  contract_testing_foundation.rs  env_config.rs  errors.rs  execution.rs  integration_tests.rs  lib.rs  logging.rs  validation.rs
temp_services/: rhai_test.yaml  test_script.rhai
test-docker/: Dockerfile
test-services/: imported-api.yaml  test-api.hooks.ts  test-api.openapi.json  test-api.types.ts
testing/: QUICKSTART.txt  README.md  SYSTEM-SUMMARY.md  quick-test.sh  run-e2e-tests.sh  test-graphql.yaml  test-rest-openapi.json  test-rest.yaml  test-service.yaml  test_api.sh
tests/: admin_api.rs  admin_security.rs  admin_server_integration.rs  auth.rs  auth_api.rs  bluetooth_config.rs  cli_commands.rs  cli_output.rs  cloud_api.rs  cloud_command_test.rs  codegen_api.rs  config_api.rs  contract_use_cases.rs  dockerize.rs  fault_injection.rs  feature_flags.rs  fs_utils.rs  gui_tests.rs  helpers_faker.rs  helpers_math.rs  helpers_text.rs  https_response.rs  import_export.rs  mcp.rs  mcp_create_request.json  mcp_generate_request.json  mcp_get_simulator_status_request.json  mcp_list_services_request.json  mcp_request.json  openapi_conversion.rs  p2p_integration_test.rs  plugin_loading.rs  plugin_system.rs  react_query_generation.rs  react_view_generation.rs  recording_api.rs  recording_proxy_test.rs  report_sink.rs  security.rs  security_admin_auth.rs  (+17 more)
verification/: verify_dashboard.py
webui/: .gitignore  Dockerfile.dev  README.md  demo_video.webm  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  record_demo.py  tailwind.config.ts
(+399 files in other folders)
