[package]
name = "apicentric"
version = "0.2.5"
edition = "2021"
description = "Toolkit for building, recording, and sharing mock APIs"
repository = "https://github.com/pmaojo/apicentric"
license = "MIT"

[lib]
crate-type = ["rlib"]

[features]
# Default includes TUI and WebUI for backward compatibility, but excludes P2P and desktop GUI
default = ["tui", "webui", "simulator", "contract-testing", "mock-data", "database", "file-watch", "websockets", "scripting"]

# Core features
simulator = []
contract-testing = ["reqwest", "dep:async-trait"]
graphql = ["dep:async-graphql", "dep:async-graphql-parser"]

# Optional modular features
# P2P: Peer-to-peer collaboration features (CRDT, libp2p networking, sharing)
# Adds ~5-10MB to binary size. Disable for lightweight deployments.
p2p = ["dep:libp2p", "dep:automerge", "dep:async-trait"]

# TUI: Terminal-based user interface using ratatui
# Provides interactive terminal UI for service management and monitoring
tui = ["ratatui", "crossterm", "indicatif", "console", "inquire"]

# GUI: Desktop graphical user interface using egui/eframe
# Provides native desktop GUI application for service management
gui = ["dep:eframe", "dep:egui", "mock-data"]

# WebUI: Web-based user interface with Axum server
# Provides browser-based interface for service management
# Note: Core HTTP server (axum) is always included; this flag controls WebUI-specific features
webui = ["websockets"]

# Optional heavy features
mock-data = ["fake", "rand"]
database = ["rusqlite"]
file-watch = ["notify"]
websockets = ["tokio-tungstenite", "futures-util/sink"]
scripting = ["deno_core"]

# MCP: Model Context Protocol for AI agent interaction
mcp = ["dep:rmcp", "simulator"]

# Convenience bundles
# cli-tools: Essential CLI functionality with TUI but without desktop GUI/WebUI
cli-tools = ["simulator", "contract-testing", "tui"]

# minimal: Bare minimum for API simulation only
minimal = ["simulator"]

# full: All features including P2P, desktop GUI, and WebUI
full = ["p2p", "gui", "webui", "simulator", "contract-testing", "tui", "mock-data", "database", "file-watch", "websockets", "scripting", "graphql"]

# no-p2p: Everything except P2P (useful for lightweight deployments)
no-p2p = ["gui", "webui", "simulator", "contract-testing", "tui", "mock-data", "database", "file-watch", "websockets", "scripting"]

[dependencies]
indexmap = "2.12.0"

# Core Dependencies (Shared across Native and WASI)
# These are included for both standard native targets and WASI targets (e.g. wasm32-wasi)
# but EXCLUDED for browser WASM (wasm32-unknown-unknown).
[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
# Core CLI dependencies
anyhow = "1.0.99"
clap = { version = "4.4.8", features = ["derive"] }
glob = "0.3.3"
log = "0.4.20"
env_logger = "0.10"
dotenvy = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
thiserror = "1.0.69"
url = "2.5.4"
regex = "1.11.1"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"] }
tempfile = "3.8.0"

# Minimal async runtime
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "fs", "process", "net", "sync", "time", "macros", "io-util"] }

# HTTP server and client
hyper = { version = "1.0", default-features = false, features = ["http1", "http2", "server", "client"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "http2", "tls12", "ring"] }
hyper-util = { version = "0.1", default-features = false, features = ["server", "client", "client-legacy", "http1", "http2", "tokio"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
axum = { version = "0.7", default-features = false, features = ["macros", "tokio", "http1", "http2", "json", "matched-path", "original-uri", "query", "ws"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false, features = ["cors", "fs"] }
argon2 = "0.5"
jsonwebtoken = "9.2"

# GraphQL support
async-graphql = { version = "7.0", optional = true }
async-graphql-parser = { version = "7.0", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Template engine
handlebars = "6.2.0"

# TLS support
rustls = { version = "0.23.19", default-features = false, features = ["std", "tls12", "ring"] }

# OpenAPI support
openapiv3 = "2.0"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
async-trait = { version = "0.1.74", optional = true }

# Colored output
colored = "2.1.0"

# Mock data generation (optional)
fake = { version = "4.4.0", default-features = false, features = ["derive"], optional = true }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"], optional = true }

# MCP
rmcp = { version = "0.8.5", features = ["server"], optional = true }


# Native Only Dependencies
# These are strictly excluded for ALL wasm32 targets (including WASI).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# WebSocket support (optional)
tokio-tungstenite = { version = "0.21", optional = true }

# P2P networking support (heavy)
libp2p = { version = "0.55", optional = true, features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "request-response", "tokio", "quic", "macros"] }
automerge = { version = "0.5", optional = true }

# JavaScript runtime for scripting (heavy, native only)
deno_core = { version = "0.272.0", optional = true }

# Database (Native only for now, can potentially work on WASI with bundled sqlite)
rusqlite = { version = "0.31", default-features = false, features = ["bundled"], optional = true }

# Plugin system (Native only)
libloading = "0.8"

# Terminal UI dependencies (Native only usually)
indicatif = { version = "0.17.7", default-features = false, optional = true }
console = { version = "0.15.7", default-features = false, optional = true }
inquire = { version = "0.6", default-features = false, features = ["crossterm"], optional = true }
ratatui = { version = "0.26.0", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.27", default-features = false, optional = true }

# File watching (Native only)
notify = { version = "8.2.0", optional = true }

# GUI dependencies (Native only)
eframe = { version = "0.33.0", optional = true }
egui = { version = "0.33.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[bin]]
name = "apicentric"
path = "src/bin/apicentric.rs"

[profile.release]
# Enable Link Time Optimization for better optimization across crates
lto = true
# Use single codegen unit for maximum optimization (slower compile, smaller binary)
codegen-units = 1
# Abort on panic to reduce binary size (no unwinding support)
panic = "abort"
# Strip debug symbols from binary to reduce size
strip = true
# Optimize for size while maintaining performance
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
