[package]
name = "apicentric"
version = "0.3.4"
edition = "2021"
description = "Toolkit for building, recording, and sharing mock APIs"
repository = "https://github.com/pmaojo/apicentric"
license = "MIT"

[lib]
crate-type = ["rlib"]

[features]
# Default includes TUI and WebUI for backward compatibility, but excludes P2P and desktop GUI
default = ["tui", "webui", "simulator", "contract-testing", "mock-data", "database", "file-watch", "websockets", "scripting", "iot"]

# Core features
simulator = []
contract-testing = ["reqwest", "dep:async-trait"]
graphql = ["dep:async-graphql", "dep:async-graphql-parser"]

# Optional modular features
# P2P: Peer-to-peer collaboration features (CRDT, libp2p networking, sharing)
# Adds ~5-10MB to binary size. Disable for lightweight deployments.
p2p = ["dep:libp2p", "dep:automerge", "dep:async-trait"]

# TUI: Terminal-based user interface using ratatui
# Provides interactive terminal UI for service management and monitoring
tui = ["ratatui", "crossterm", "indicatif", "console", "inquire", "reqwest"]

# GUI: Desktop graphical user interface using egui/eframe
# Provides native desktop GUI application for service management
gui = ["dep:eframe", "dep:egui", "mock-data"]

# WebUI: Web-based user interface with Axum server
# Provides browser-based interface for service management
# Note: Core HTTP server (axum) is always included; this flag controls WebUI-specific features
webui = ["websockets"]

# Optional heavy features
mock-data = ["fake", "rand"]
database = ["rusqlite"]
file-watch = ["notify"]
websockets = ["tokio-tungstenite", "futures-util/sink"]
scripting = ["dep:rhai"]

# MCP: Model Context Protocol for AI agent interaction
mcp = ["dep:rmcp", "simulator"]

# IoT: Digital Twin capabilities
iot = ["dep:rumqttc", "dep:tokio-modbus", "dep:rhai", "dep:csv"]

# Convenience bundles
# cli-tools: Essential CLI functionality with TUI but without desktop GUI/WebUI
cli-tools = ["simulator", "contract-testing", "tui"]

# minimal: Bare minimum for API simulation only
minimal = ["simulator"]

# full: All features including P2P, desktop GUI, and WebUI
full = ["p2p", "gui", "webui", "simulator", "contract-testing", "tui", "mock-data", "database", "file-watch", "websockets", "scripting", "graphql", "iot"]

# no-p2p: Everything except P2P (useful for lightweight deployments)
no-p2p = ["gui", "webui", "simulator", "contract-testing", "tui", "mock-data", "database", "file-watch", "websockets", "scripting", "iot"]

[dependencies]
indexmap = "2.12.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Core CLI dependencies
anyhow = "1.0.99"
clap = { version = "4.4.8", features = ["derive"] }
glob = "0.3.3"
log = "0.4.20"
env_logger = "0.10"
dotenvy = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
thiserror = "1.0.69"
url = "2.5.4"
regex = "1.11.1"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"] }
tempfile = "3.8.0"

# Minimal async runtime
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "fs", "process", "net", "sync", "time", "macros", "io-util", "signal"] }

# HTTP server and client
hyper = { version = "1.0", default-features = false, features = ["http1", "http2", "server", "client"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["native-tokio", "http1", "http2", "tls12", "ring"] }
hyper-util = { version = "0.1", default-features = false, features = ["server", "client", "client-legacy", "http1", "http2", "tokio"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
axum = { version = "0.7", default-features = false, features = ["macros", "tokio", "http1", "http2", "json", "matched-path", "original-uri", "query", "ws", "multipart"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false, features = ["cors", "fs"] }
argon2 = "0.5"
jsonwebtoken = "9.2"

# WebSocket support (optional)
tokio-tungstenite = { version = "0.21", optional = true }

# P2P networking support (optional, heavy)
libp2p = { version = "0.55", optional = true, features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "request-response", "tokio", "quic", "macros"] }
automerge = { version = "0.5", optional = true }

# GraphQL support (optional)
async-graphql = { version = "7.0", optional = true }
async-graphql-parser = { version = "7.0", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Template engine (lightweight)
handlebars = "6.2.0"

# TLS support
rustls = { version = "0.23.19", default-features = false, features = ["std", "tls12", "ring"] }

# OpenAPI support
openapiv3 = "2.0"

# HTTP client for contract testing (optional)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
async-trait = { version = "0.1.74", optional = true }

# Database (optional)
rusqlite = { version = "0.31", default-features = false, features = ["bundled"], optional = true }

# Plugin system (basic)
libloading = "0.8"

# Terminal UI dependencies (optional)
indicatif = { version = "0.17.7", default-features = false, optional = true }
console = { version = "0.15.7", default-features = false, optional = true }
inquire = { version = "0.6", default-features = false, features = ["crossterm"], optional = true }
ratatui = { version = "0.26.0", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.27", default-features = false, optional = true }

# Colored output (lightweight, always included)
colored = "2.1.0"

# Mock data generation (optional)
fake = { version = "4.4.0", default-features = false, features = ["derive"], optional = true }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"], optional = true }

# File watching (optional)
notify = { version = "8.2.0", optional = true }

# GUI dependencies (optional)
eframe = { version = "0.33.0", optional = true }
egui = { version = "0.33.0", optional = true }

# MCP: Model Context Protocol (optional)
rmcp = { version = "0.8.5", features = ["server"], optional = true }

# IoT / Digital Twin
rumqttc = { version = "0.24", optional = true }
tokio-modbus = { version = "0.14", default-features = false, features = ["tcp", "server", "tcp-server"], optional = true }
rhai = { version = "1.17", features = ["sync", "serde"], optional = true }
csv = { version = "1.3", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[bin]]
name = "apicentric"
path = "src/bin/apicentric.rs"

[profile.release]
# Enable Link Time Optimization for better optimization across crates
lto = true
# Use single codegen unit for maximum optimization (slower compile, smaller binary)
codegen-units = 1
# Abort on panic to reduce binary size (no unwinding support)
panic = "abort"
# Strip debug symbols from binary to reduce size
strip = true
# Optimize for size while maintaining performance
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
