[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
apicentric = { path = "../../", default-features = false, features = ["simulator", "iot", "file-watch", "database", "contract-testing", "mock-data", "websockets", "scripting"] }
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
